<resources>
    <string name="app_name">Mit Dyrs Sundhed</string>
    <string name="title_activity_main">Mit Dyrs Sundhed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="tilføj_kæledyr">Tilføj Kæledyr</string>


    <!--    Tilføj kæledyr-->
    <string name="signalement">Signalement</string>
    <string name="dyrets_navn">Dyrets Navn:</string>
    <string name="fødselsdato">Fødselsdato:</string>
    <string name="race">Race:</string>
    <string name="køn">Køn:</string>
    <string name="farve">Farve:</string>
    <string name="navn">Navn:</string>
    <string name="gade">Gade:</string>
    <string name="land">Land:</string>
    <string name="telefon">Telefon:</string>
    <string name="add_pet">Add Pet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ejer">Ejer</string>
    <string name="specielle_kendetegn">Specielle kendetegn:</string>
    <string name="sundhedseftersyn">Sundhedseftersyn</string>
    <string name="save">Save</string>
    <string name="life_span">Life span:</string>
    <string name="temperament">Temperament:</string>
    <string name="find_din_nye_hund">Find din nye hund</string>

    <!-- SUNDHEDSTJEK -->
    <string name="eyes">Øjne</string>
    <string name="outer_ear">Ydre øre</string>
    <string name="nose">Næse</string>
    <string name="oral_cavity">Mundhule</string>
    <string name="navel_groin">Navle/lyske</string>
    <string name="skin_hairLayer">Hud/hårlag</string>
    <string name="lymphNodes">Lymfeknuder</string>
    <string name="paw_claws">Poter/kløer</string>
    <string name="heart_lungs">Hjerte/lunger</string>
    <string name="sexual_organs">Kønsorganer</string>
    <string name="milk_lumps">Mælkekirtler</string>
    <string name="anal_lumps">Analkirtler</string>
    <string name="posture_movements">Holdning/Bevægelser</string>
    <string name="remarks">Bemærkninger:</string>
    <string name="temper">Temperament:</string>
    <string name="laboratory_tests">Laboratorieundersøgelser:</string>
    <string name="drinking_habits">Drikkelyst</string>
    <string name="appetite">Appetit</string>
    <string name="joint">Led</string>
    <string name="nyt_sundhedseftersyn">Nyt Sundhedseftersyn</string>
    <string name="sundhedstjek_rv">Læge og dato:</string>
    <string name="v_kstskema">Vækstskema</string>
    <string name="health_inspection">Sundhedstjek</string>
    <string name="settings">Indstillinger</string>
    <string name="growth_track">Vækst Skema</string>
    <string name="new_health_inspection">Nyt Sundhedstjek</string>
    <string name="all_health_inspections">Alle Sundhedseftersyn</string>
    <string name="description">Signalement</string>
    <string name="add_description">Tilføj Signalement</string>
    <!-- SUNDHEDSTJEK -->

    <string-array name="spinner_array">
        <item>Ingen Valgt</item>
        <item>Nedsat</item>
        <item>Normal</item>
        <item>Forøget</item>
    </string-array>

    <string-array name="spinner_temper">
        <item>Playful</item>
        <item>Loyal</item>
        <item>Independent</item>
        <item>Intelligent</item>
        <item>Happy</item>
        <item>Vocal</item>
        <item>Trainable</item>
        <item>Good-natured</item>
        <item>Devoted</item>
        <item>Lively</item>
        <item>Brave</item>
        <item>Charming</item>
        <item>Fearless</item>
        <item>Keen</item>
        <item>Alert</item>
        <item>Confident</item>
        <item>Faithful</item>
        <item>Tenacious</item>
        <item>Energetic</item>
        <item>Responsive</item>
    </string-array>


</resources>