<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alignmentMode="alignBounds"
    android:columnCount="2"
    android:columnOrderPreserved="false"
    android:useDefaultMargins="true"

    tools:context=".AddPetActivity">


    <TextView
        android:id="@+id/tv_signalement"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/signalement"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/tv_pet_name"
        android:layout_gravity="end"
        android:text="@string/dyrets_navn"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText_pet_name"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_birthdate"
        android:layout_gravity="end"
        android:text="@string/fødselsdato"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/date_birthdate"
        android:ems="10"
        android:inputType="date"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_race"
        android:layout_gravity="end"
        android:text="@string/race"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText_race"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_gender"
        android:layout_gravity="end"
        android:text="@string/køn"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText_gender"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_color"
        android:layout_gravity="end"
        android:text="@string/farve"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText_color"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_ejer"
        android:layout_rowSpan="1"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="Ejer"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/tv_ownerName"
        android:layout_gravity="end"
        android:text="@string/navn"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText_ownerName"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_street"
        android:layout_gravity="end"
        android:text="@string/gade"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText_street"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_city"
        android:layout_gravity="end"
        android:text="By"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText_city"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_country"
        android:layout_gravity="end"
        android:text="@string/land"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText_country"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_phoneNumber"
        android:text="@string/telefon"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText_phoneNumber"
        android:ems="10"
        android:inputType="phone"
        android:textSize="16sp" />


</GridLayout>