<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.github.marker99.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_addPetInfoFragment"
            app:destination="@id/addSignalementFragment" />
        <action
            android:id="@+id/action_nav_home_to_petSignalement"
            app:destination="@id/nav_signalement" />
    </fragment>

    <fragment
        android:id="@+id/nav_signalement"
        android:name="com.github.marker99.ui.signalement.view.SignalementFragment"
        android:label="@string/description"
        tools:layout="@layout/fragment_signalement" />

    <fragment
        android:id="@+id/nav_allHealthInspections"
        android:name="com.github.marker99.ui.health_inspection.recylerview.AllHealthInspectionsFragment"
        android:label="@string/all_health_inspections"
        tools:layout="@layout/fragment_all_health_inspections" >
        <action
            android:id="@+id/action_nav_healthInspection_to_addHealthInspectionFragment"
            app:destination="@id/addHealthInspectionFragment" />
        <action
            android:id="@+id/action_nav_allHealthInspections_to_healthInspection"
            app:destination="@id/specificHealthInspection" />
    </fragment>

    <fragment
        android:id="@+id/addSignalementFragment"
        android:name="com.github.marker99.ui.signalement.add.AddSignalementFragment"
        android:label="@string/add_description"
        tools:layout="@layout/fragment_add_signalement" />

    <fragment
        android:id="@+id/addHealthInspectionFragment"
        android:name="com.github.marker99.ui.health_inspection.new_inspection.AddHealthInspectionFragment"
        android:label="@string/new_health_inspection"
        tools:layout="@layout/fragment_add_health_inspection" />

    <fragment
        android:id="@+id/specificHealthInspection"
        android:name="com.github.marker99.ui.health_inspection.specific_inspection.SpecificHealthInspection"
        android:label="@string/health_inspection"
        tools:layout="@layout/fragment_health_inspection" />

    <fragment
        android:id="@+id/dogFragment"
        android:name="com.github.marker99.ui.find_your_dog.DogFragment"
        android:label="Find your new dog"
        tools:layout="@layout/fragment_find_your_new_dog" />
    <fragment
        android:id="@+id/settings_dest"
        android:name="com.github.marker99.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment" />
    <fragment
        android:id="@+id/growthTrackFragment"
        android:name="com.github.marker99.ui.growth_track.GrowthTrackFragment"
        android:label="@string/growth_track"
        tools:layout="@layout/fragment_growth_track" />
</navigation>